Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/Credit_Analysis_c__c.object-meta.xml
<CustomObject>
    <label>Credit_Analysis</label>
    <nameField>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Credit_Analysis__c Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit_Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>