Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Idade_Age__c.field-meta.xml
<CustomField>
    <fullName>Idade_Age__c</fullName>
    <label>Idade/Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>