Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Nivel_de_risco_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_risco_Risk_Level__c</fullName>
    <label>Nivel de risco/Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>