Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Nome_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Cliente__c</fullName>
    <label>Nome do Cliente/Client Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>