Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Prazo_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Prazo_Loan_Term__c</fullName>
    <label>Prazo/Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>