Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Renda_mensal__c.field-meta.xml
<CustomField>
    <fullName>Renda_mensal__c</fullName>
    <label>Renda mensal/Monthly Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>