Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Score_de_Cr_dito_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Score_de_Cr_dito_Credit_Score__c</fullName>
    <label>Score de Credito/Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>