Finance-Project/force-app/main/default/objects/Credit_Analysis_c__c/fields/Valor_solicitado__c.field-meta.xml
<CustomField>
    <fullName>Valor_solicitado__c</fullName>
    <label>Valor solicitado/Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>